finished documenting routes for all resources and will most likely add more jsdoc and open api documentation later on in development
